# modsleuth

./: .gitignore  README.md  pyproject.toml  requirements.txt
modsleuth/: __init__.py  check.py  cli.py  config.py  pipeline.py  recursive.py  store.py  subsets.py  viz.py
modsleuth/dedup/: __init__.py  __main__.py  lib.py
modsleuth/prompts/: audit.md  organize.md  relate.md  triage.md
